adding content to home page

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -18,10 +18,11 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
 }
+
+/* .main-bg {
+  background-image: url("./wellness-bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: right;
+} */
