--- a/frontend/app/(public)/(taketest)/result/styles.module.css
+++ b/frontend/app/(public)/(taketest)/result/styles.module.css
@@ -1,3 +1,12 @@
-.test{
-    color: green;
-}
+.container {
+    display: grid;
+    grid-template-columns: 60% 40%;
+    padding: 2%;
+  }
+  
+  .leftSide {
+    padding-right: 10%;
+  }
+  
+
+  
